/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import public "models/additional_information.proto";
import public "models/place.proto";
import public "models/timetable.proto";

message TimetableSuggestions {

  // Timestamp when your server has started the request
  double serverRequestTimestamp = 320885932;

  // Timestamp when your server has finished the request
  double serverResponseTimestamp = 267088686;

  Place searchPlace = 16462786;

  // Shows suggested timetables based on your search place
  repeated Timetable timetables = 109413237;

  repeated AdditionalInformation additionalInformation = 467380604;

}
